# OpenglProject

./: .gitignore  .gitmodules  CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: frag.shader  vert.shader
src/: App.cpp  App.hpp  Application.cpp  Application.hpp  Colour.cpp  Colour.hpp  Quad.cpp  Quad.hpp  Shader.cpp  Shader.hpp  glError.cpp  glError.hpp  main.cpp
